# keff-for-Geant4

./: .gitignore  LICENSE  NeutronKeffective.hh  README.md
example_project/: CMakeLists.txt  fission.cc  run.mac
example_project/include/: ActionInitialization.hh  DetectorConstruction.hh  NeutronHPphysics.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  my_globals.h
example_project/src/: ActionInitialization.cc  DetectorConstruction.cc  NeutronHPphysics.cc  NeutronKeffective.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
